--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -19,7 +19,7 @@ env:
 # This runs every day on 1801 UTC
 on:
   schedule:
-    - cron: '4 06 * * *'
+    - cron: '5 6/6 * * *'
   # Allows manual workflow run (must in default branch to work)
   workflow_dispatch:
 
